projects/특이점이-온-개발자-도커-쿠버네티스/code/ex15/k8s/frontend/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: metacoding
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /                       # 모든 경로
            pathType: Prefix
            backend:
              service:
                name: frontend-service    # 프론트엔드 Service로 연결
                port:
                  number: 80
